codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__vim_replace_completion_suffix.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5313
expression: terminal.backend()
---
"▌                                                                                                   "
"▌ ma next                                                                                           "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"                                                                  100% context left | Vim: Replace  "
